@@ -17,6 +17,8 @@
 
 * Fixed forwarding events to root window, it could get unpaired events.
 
+* Fixed crash on too fast folder change with focus_previous=1.
+
 
 Changes on 1.2.3 since 1.2.2:
 
